tests/models/enum/named/f64/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = "val")]
        value: f64
    },
}
fn main() {}
